styling the project.

--- a/Projeto_JS/src/index.html
+++ b/Projeto_JS/src/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Easy JS Project</title>
-  <link rel="stylesheet" href="/src/css/index.css">
+  <link rel="stylesheet" href="/Projeto_JS/src/css/index.css">
  
 </head>
 <body>
   <header>
     <div class="container_header">
-      <a href=""><img class="img_header" src="/src/img/logo-javascript.svg" alt=""></a>
+      <a href=""><img class="img_header" src="/Projeto_JS/src/img/JS_ICON.png" alt=""></a>
       <ul class="menu">
         <li><a href="">Menu</a></li>
         <li><a href="">Sobre</a></li>
@@ -23,32 +23,55 @@
       <div class="container_main">
         <h1>Praticando JavaScript</h1>
         <p>Uma introdução à programação de computadores com exemplos e exercícios para iniciantes.</p>
-        <img class="img_main" src="/src/img/img1.jpg" alt="">
+        <img class="img_main" src="/Projeto_JS/src/img/mockup1.png" alt="">
       </div>
     </section>
     <section>
-      <div class="container_card">
-        <div class="card1">
-          <img src="/src/img/img_videoloc.jpg" width="150px" alt="">
-          <div>
-            <h2>Video Locadora JS</h2>
-            <button>Acesse agora</button>       
+      <div class="content_card">
+        <div class="container_card">
+          <div class="card1">
+            <img src="/Projeto_JS/src/img/image1.jpg" width="150px" alt="">
+            <div>
+              <h2>CASVIEE Locadora JS</h2>
+              <button class="button-3D">Acesse agora</button>       
+            </div>
           </div>
-        </div>
-        <div class="card1">
-          <img src="/src/img/img_videoloc.jpg" width="150px" alt="">
-          <div>
-            <h2>Video Locadora JS</h2>
-            <button>Acesse agora</button>       
+          <div class="card1">
+            <img src="/src/img/img_videoloc.jpg" width="150px" alt="">
+            <div>
+              <h2>Video Locadora JS</h2>
+              <button class="button-3D">Acesse agora</button>       
+            </div>
           </div>
-        </div>
-        <div class="card1">
-          <img src="/src/img/img_videoloc.jpg" width="150px" alt="">
-          <div>
-            <h2>Video Locadora JS</h2>
-            <button>Acesse agora</button>       
+          <div class="card1">
+            <img src="/src/img/img_videoloc.jpg" width="150px" alt="">
+            <div>
+              <h2>Video Locadora JS</h2>
+              <button class="button-3D">Acesse agora</button>       
+            </div>
           </div>
-        </div>
+          <div class="card1">
+            <img src="/src/img/img_videoloc.jpg" width="150px" alt="">
+            <div>
+              <h2>Video Locadora JS</h2>
+              <button class="button-3D">Acesse agora</button>       
+            </div>
+          </div>
+          <div class="card1">
+            <img src="/src/img/img_videoloc.jpg" width="150px" alt="">
+            <div>
+              <h2>Video Locadora JS</h2>
+              <button class="button-3D">Acesse agora</button>       
+            </div>
+          </div>
+          <div class="card1">
+            <img src="/src/img/img_videoloc.jpg" width="150px" alt="">
+            <div>
+              <h2>Video Locadora JS</h2>
+              <button class="button-3D">Acesse agora</button>       
+            </div>
+          </div>
+        </div>  
      </div>
       
     </section>
