Iniciando os cards de exemplos do livroI

--- a/Projeto_JS/src/index.html
+++ b/Projeto_JS/src/index.html
@@ -33,15 +33,15 @@
             <img src="/Projeto_JS/src/img/image1.jpg" width="150px" alt="">
             <div>
               <h2>CASVIEE Locadora JS</h2>
-              <button class="button-3D">Acesse agora</button>       
+              <a href="/Projeto_JS/src/pages/locadora.html"><button class="button-3D"  >Acesse agora</button> </a>           
             </div>
           </div>
           <div class="card1">
             <img src="/src/img/img_videoloc.jpg" width="150px" alt="">
             <div>
               <h2>Video Locadora JS</h2>
-              <button class="button-3D">Acesse agora</button>       
-            </div>
+              <a href="/Projeto_JS/src/pages/locadora.html"><button class="button-3D"  >Acesse agora</button> </a>      
+            </div> 
           </div>
           <div class="card1">
             <img src="/src/img/img_videoloc.jpg" width="150px" alt="">
