--- a/Projeto_JS/src/index.html
+++ b/Projeto_JS/src/index.html
@@ -29,7 +29,7 @@
     <section>
       <div class="content_card">
         <div class="container_card">
-          <div class="card1">
+          <div class="card1 transition">
             <img src="/Projeto_JS/src/img/image1.jpg" width="150px" alt="">
             <div>
               <h2>CASVIEE Locadora JS</h2>
