--- a/Projeto_JS/src/pages/locadora.html
+++ b/Projeto_JS/src/pages/locadora.html
@@ -11,12 +11,13 @@
         
         <div class="content">
             <h1>Video Locadora Casviee</h1><hr>
-            <p>Título do Filme: <input type="text" id="inTitulo"> </p>
-            <p> Duração(min):   <input type="text" id="inDuracao" > </p>
-            <p><input type="button" value="Converter em Horas e Minutos" id="btConverter"></p>
+            <h6>Forneça as informações abaixo e saiba quanto tempo o filme vai durar.</h6>
+            <p>Título do Filme: <input type="text" placeholder="Insira um Titulo" id="inTitulo"> </p>
+            <p> Duração(min):   <input type="text" placeholder="Insira a duração" id="inDuracao" > </p>
+            <p><input type="button" class="button-3D" value="Converter em Horas e Minutos" id="btConverter"></p>
             <p id="outTitulo"></p>
             <p id="outResposta"></p><hr>
-            <a href="/Projeto_JS/src/index.html"><input type="button" value="Voltar"></a> 
+            <a href="/Projeto_JS/src/index.html"><input type="button"  class="button-3D" width="150px" value="Voltar"></a> 
         </div>
         <img src="/Projeto_JS/src/img/image1.jpg" alt="">
        
