Creating more Exercise Cards.

--- a/Projeto_JS/src/index.html
+++ b/Projeto_JS/src/index.html
@@ -37,16 +37,16 @@
             </div>
           </div>
           <div class="card1">
-            <img src="/src/img/img_videoloc.jpg" width="150px" alt="">
+            <img src="/Projeto_JS/src/img/car_image2.jpg" width="150px" alt="">
             <div>
-              <h2>Video Locadora JS</h2>
-              <a href="/Projeto_JS/src/pages/locadora.html"><button class="button-3D"  >Acesse agora</button> </a>      
+              <h2>MARFOR Revendas</h2>
+              <a href="/Projeto_JS/src/pages/carros_store.html"><button class="button-3D"  >Acesse agora</button> </a>      
             </div> 
           </div>
           <div class="card1">
-            <img src="/src/img/img_videoloc.jpg" width="150px" alt="">
+            <img src="/Projeto_JS/src/img/food_image.jpg" width="150px" alt="">
             <div>
-              <h2>Video Locadora JS</h2>
+              <h2>JavaFlavor Restaurante</h2>
               <button class="button-3D">Acesse agora</button>       
             </div>
           </div>
