Styling the Restaurant Card

--- a/Projeto_JS/src/index.html
+++ b/Projeto_JS/src/index.html
@@ -47,7 +47,7 @@
             <img src="/Projeto_JS/src/img/food_image.jpg" width="150px" alt="">
             <div>
               <h2>JavaFlavor Restaurante</h2>
-              <button class="button-3D">Acesse agora</button>       
+              <a href="/Projeto_JS/src/pages/restaurant.html"><button class="button-3D">Acesse agora</button> </a>      
             </div>
           </div>
           <div class="card1">
