JS is already on restaurant page

--- a/Projeto_JS/src/pages/restaurant.html
+++ b/Projeto_JS/src/pages/restaurant.html
@@ -14,7 +14,7 @@
  
 </head>
 <body>
-    <h1 class="header">JavaFlavor Restaurant</h1>
+    <h1 class="header"><i class="fa-brands fa-pagelines"></i>JavaFlavor Restaurant<i class="fa-brands fa-pagelines"></i></h1>
     <div class="container">
        
         <div class="content">
