--- a/Projeto_JS/src/index.html
+++ b/Projeto_JS/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Easy JS Project</title>
+  <link rel="stylesheet" href="/Projeto_JS/src/css/index.css">
  
  
 </head>
